# samod

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  SEDIMENTREE_INTEGRATION.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
samod/: Cargo.toml
samod-cli/: Cargo.toml  README.md
samod-cli/src/: listener_arg.rs  main.rs  otel_observer.rs  peer_arg.rs
samod-core/: CHANGELOG.md  Cargo.toml
samod-core/docs/: subduction-design.md
samod-core/src/: actors.rs  automerge_url.rs  doc_search.rs  document_id.rs  document_persisted.rs  lib.rs  loader.rs  network.rs  peer_id.rs  storage_key.rs  time_provider.rs  unix_timestamp.rs
samod-core/src/actors/: document.rs  driver.rs  executor.rs  hub.rs  loading.rs  messages.rs
samod-core/src/actors/document/: actor.rs  actor_input.rs  actor_io_access.rs  actor_state.rs  compaction.rs  doc_actor_result.rs  doc_state.rs  document_actor.rs  document_actor_id.rs  load.rs  on_disk_state.rs  peer_doc_connection.rs  phase.rs  ready.rs  request.rs  run.rs  spawn_args.rs  sync_message_stat.rs
samod-core/src/actors/document/io/: document_io_result.rs
samod-core/src/actors/document/on_disk_state/: compaction_hash.rs
samod-core/src/actors/document/phase/: loading.rs  ready.rs  request.rs
samod-core/src/actors/document/run/: actor_input.rs  actor_output.rs
samod-core/src/actors/hub/: command.rs  command_handlers.rs  connection.rs  dialer.rs  hub_event.rs  hub_event_payload.rs  hub_input.rs  hub_results.rs  listener.rs  run.rs  state.rs  subduction_sync.rs  task_context.rs
samod-core/src/actors/hub/command/: command.rs  command_id.rs  command_result.rs
samod-core/src/actors/hub/connection/: conn_out.rs  connection.rs  receive_event.rs  repo_sync_connection.rs  subduction_connection.rs
samod-core/src/actors/hub/io/: hub_io_action.rs  hub_io_result.rs
samod-core/src/actors/hub/run/: hub_output.rs
samod-core/src/actors/hub/state/: actor_info.rs  pending_commands.rs  searches.rs
samod-core/src/actors/hub/task_context/: conn_access.rs  io_access.rs  state_access.rs
samod-core/src/actors/messages/: doc_to_hub_msg.rs  hub_to_doc_msg.rs
samod-core/src/io/: io_result.rs  io_task.rs  io_task_id.rs  storage_result.rs
samod-core/src/network/: connection_event.rs  connection_id.rs  connection_info.rs  connection_owner.rs  connector_config.rs  dialer_event.rs  dialer_id.rs  listener_id.rs  peer_metadata.rs  transport_request.rs  wire_protocol.rs
samod-core/tests/: compaction.rs  connection_events.rs  connectors.rs  create_find_change.rs  document_sync_advanced.rs  peer_doc_state_changes.rs  stop.rs  subduction_sync.rs  wait_for_dialer.rs
samod-py/: Cargo.toml  README.md  pyproject.toml
samod-test-harness/: Cargo.toml
samod-test-harness/src/: doc_actor_runner.rs  lib.rs  samod_ref.rs  samod_wrapper.rs  storage.rs
samod/interop-test-server/: client.js  client.ts  pnpm-lock.yaml  server.ts
samod/src/: acceptor_handle.rs  actor_handle.rs  actor_task.rs  announce_policy.rs  builder.rs  conn_finished_reason.rs  connection.rs  dialer.rs  dialer_handle.rs  doc_actor_inner.rs  doc_handle.rs  doc_runner.rs  io_loop.rs  lib.rs  observer.rs  peer_connection_info.rs  peer_info.rs  runtime.rs  search.rs  signer.rs  stopped.rs  storage.rs  tokio_io.rs  transport.rs  unbounded.rs  wasm.rs  websocket.rs
samod/src/connection/: connection_handle.rs
samod/src/runtime/: gio.rs  localpool.rs  tokio.rs  wasm.rs
samod/src/storage/: filesystem.rs  in_memory.rs  indexeddb.rs  testing.rs
samod/tests/: connector_integration.rs  gio_storage_test.rs  in_memory_storage_test.rs  localpool_smoke.rs  sink_error.rs  smoke.rs  threadpool.rs  tincans.rs  tokio_storage_test.rs
samod/tests/js_interop/: js_wrapper.rs  main.rs
scripts/: build-wasm.sh  test-wasm.sh
subduction-sans-io/: Cargo.toml  README.md
subduction-sans-io/src/: batch_sync.rs  engine.rs  incremental.rs  lib.rs  messages.rs  storage.rs  storage_coord.rs  types.rs
subduction-sans-io/src/handshake/: challenge.rs  mod.rs  rejection.rs  response.rs
wasm-tests/: .gitignore  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.js
wasm-tests/src/: app.ts  index.html
wasm-tests/tests/: samod-wasm.spec.ts  server-helper.ts
