[package]
name = "samod-core"
version = "0.9.0"
edition = "2024"
repository = "https://github.com/alexjg/samod"
authors = ["Alex Good <alex@patternist.xyz>"]
description = "the core library for the samod automerge-repo implementation"
license = "MIT"

[dependencies]
base64 = "0.21"
tracing = "0.1.41"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.9"
automerge = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
minicbor = { version = "1.0.0", features = ["std"] }
thiserror = "2.0.12"
url = "2.5"
bs58 = { version = "0.5.1", features = ["check"] }
sha2 = "0.10.9"
subduction-sans-io = { path = "../subduction-sans-io", optional = true }
sedimentree_core = { path = "../../subduction/sedimentree_core", default-features = false, optional = true }
blake3 = { version = "1.8", optional = true }
subduction_crypto = { path = "../../subduction/subduction_crypto", default-features = false, optional = true }
ed25519-dalek = { version = "2.1", optional = true }

[features]
default = []
subduction = [
    "dep:subduction-sans-io",
    "dep:subduction_crypto",
    "dep:sedimentree_core",
    "dep:blake3",
    "dep:ed25519-dalek",
    "samod-test-harness/subduction",
]

[lib]

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
samod-test-harness = { path = "../samod-test-harness" }
