[package]
name = "samod-test-harness"
version = "0.1.0"
edition = "2024"

[dependencies]
automerge = { workspace = true }
rand = "0.9.1"
samod-core = { path = "../samod-core" }
tracing = "0.1.41"
url = "2.5"
ed25519-dalek = { version = "2.1", optional = true }
blake3 = { version = "1.8", optional = true }
subduction-sans-io = { path = "../subduction-sans-io", optional = true }

[features]
default = []
subduction = ["samod-core/subduction", "dep:ed25519-dalek", "dep:blake3", "dep:subduction-sans-io"]

[lib]

pulish = false
