[package]
name = "samod"
version = "0.3.1"
edition = "2024"
authors = ["Alex Good <alex@patternist.xyz>"]
description = "A rust library for managing automerge documents, compatible with the js automerge-repo library"
license = "MIT"
repository = "https://github.com/alexjg/samod"

[features]
tokio = ["dep:tokio", "dep:tokio-util"]
axum = ["dep:axum", "tokio"]
tungstenite = ["dep:tungstenite", "dep:tokio-tungstenite", "tokio"]
gio = ["dep:gio", "dep:glib"]
threadpool = ["dep:rayon"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys", "samod-core/wasm"]

[dependencies]
automerge = "0.6.1"
axum = { version = "0.8.4", optional = true, features = ["ws"] }
bytes = "1.10.1"
chrono = "0.4.41"
futures = "0.3.31"
rand = "0.9.1"
rayon = { version = "1.10.0", optional = true }
samod-core = { path = "../samod-core", version = "0.3.1" }
tokio = { version = "1.46.0", features = ["rt", "time"], optional = true }
tracing = "0.1.41"
tungstenite = { version = "0.27.0", optional = true }
gio = { version = "0.21.1", optional = true }
glib = { version = "0.21.1", optional = true }
async-channel = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.0", features = ["fs"], optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
tokio-util = { version = "0.7.15", features = [
    "codec",
    "net",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "WorkerGlobalScope",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Blob",
    "FileReader",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
], optional = true }
indexed_db_futures = { version = "0.6.4", features = ["cursors", "async-upgrade"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
tokio = { version = "1.46.0", features = ["rt", "time"], optional = true }
tokio-util = { version = "0.7.15", features = [
    "codec",
], optional = true }
tracing = "0.1.41"
tungstenite = { version = "0.27.0", optional = true }
gio = { version = "0.21.1", optional = true }
glib = { version = "0.21.1", optional = true }

[dev-dependencies]
eyre = "0.6.12"
reqwest = { version = "0.12.22", features = [
    "json",
    "blocking",
], default-features = false }
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.46.0", features = ["macros", "process"] }
tokio-test = { version = "0.4.4" }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = { version = "0.7.15", features = ["codec", "net"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "js_interop"
required-features = ["tokio", "tungstenite", "axum"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
